nav-bar fixed for mobile view

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     </section>
     <section class="container py-4">
         <div class="d-flex justify-content-between">
-            <h3>Dairy, Bread & Eggs</h3>
+            <h3>Rolling paper & tobacco</h3>
             <h5 class="text-success">see all</h5>
         </div>
         <div class="container-in">
